# retrievia

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  retrievia-auth.postman_collection.json  tailwind.config.js
alembic/: env.py
alembic/versions/: 20260214_0001_initial_schema.py
app/: main.py
app/api/: auth.py  chat.py  documents.py  testing.py
app/auth/: dependencies.py
app/core/: config.py  logging.py
app/db/: __init__.py  mixins.py  models.py  session.py
app/ingestion/: __init__.py  chunker.py  pipeline.py  types.py
app/ingestion/parsers/: __init__.py  pdf.py  text.py
app/middleware/: rate_limit.py  request_size.py  tenant_context.py
app/prompting/: __init__.py  prompt_builder.py
app/providers/: __init__.py
app/providers/llm/: __init__.py  base.py  gemini.py
app/retrieval/: __init__.py  pipeline.py  rerank.py  types.py
app/security/: jwt.py  password.py
app/static/css/: app.css
app/static/js/: app.js
app/stores/: __init__.py
app/stores/vector/: pinecone_store.py
app/templates/: base.html
app/templates/app/: chat.html  documents.html  (+2 more)
app/testing/: __init__.py  seed_fixtures.py
app/web/: routes.py
app/worker/: celery_app.py
docker/: api.Dockerfile  worker.Dockerfile
docs/: README.md  architecture.md  configuration.md  development.md  getting-started.md  operations.md
scripts/: chat_stream_client.py  chat_stream_curl_example.sh  db_migrate.py  gemini_smoke_test.py  pinecone_smoke_test.py  prompt_harness.py  seed_test_auth_data.py  seed_test_rag_data.py
(+14 files in other folders)
