[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "retrievia"
version = "0.1.0"
description = "Production-grade RAG chatbot backend scaffold"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.12.5",
  "pydantic-settings==2.12.0",
  "sqlalchemy==2.0.36",
  "psycopg[binary]==3.2.13",
  "asyncpg==0.30.0",
  "alembic==1.14.1",
  "redis==5.2.1",
  "celery[redis]==5.4.0",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "python-multipart==0.0.20",
  "httpx==0.28.1",
  "structlog==24.4.0",
  "prometheus-client==0.21.1",
  "opentelemetry-api==1.29.0",
  "opentelemetry-sdk==1.29.0",
  "opentelemetry-instrumentation-fastapi==0.50b0",
  "opentelemetry-instrumentation-sqlalchemy==0.50b0",
  "opentelemetry-instrumentation-redis==0.50b0",
  "pinecone==5.4.2",
  "google-genai==0.3.0",
  "pypdf==5.3.1"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.25.0",
  "ruff==0.8.4",
  "mypy==1.14.1"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.pytest.ini_options]
asyncio_mode = "auto"
